--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,22 @@ main>.container-fluid {
 .about_container {
     width: 60%;
     margin: 0 auto;
-    background-color: rgba(255, 255, 255, .5);
+}
+
+.about .btn {
+    font-size: 1.3rem;
+    color: inherit;
+    background-color: var(--main-green);
+    border: 1px solid white;
+}
+
+.about .btn:hover {
+    color: var(--main-green);
+    background-color: var(--font-clear);
+}
+
+.about p {
+    padding-bottom: 1.5rem;
 }
 
 
