--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Colors */
 :root {
     --header: #2C3E50;
-    --main-green: #1ABC9C;
+    --main-green: #1abc9c;
     --footer: #3A546D;
     --copyright: #2C3E50;
     --font-clear: #FFFFFF;
@@ -54,6 +54,17 @@ h3 {
     text-transform: uppercase;
     font-size: 1.3rem;
     font-weight: 400;
+}
+
+.flex_col_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.flex_row_center {
+    display: flex;
+    align-items: center;
 }
 
 /* HEADER */
@@ -206,13 +217,46 @@ main>.container-fluid {
 .card {
     border-color: transparent;
     margin-bottom: 1.5rem;
+    position: relative;
 }
 
-.card>img {
+.card img {
     border-radius: 10px;
 }
 
-/* Jumbotron - Media Query */
+/* Overlay */
+
+.overlay {
+    color: var(--font-clear);
+    font-size: 7rem;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    background-color: rgba(26, 188, 156, .5);
+    display: none;
+}
+
+.plus {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.overlay i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.card:hover .overlay {
+    display: inline-block;
+}
+
+/* Portfolio - Media Query */
 
 /* Tablet */
 
